fixed overflow on the footer.

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,8 @@ button:hover {
 }
 
 footer {
-    width: 100vw;
+    width: 100%;
+    overflow: hidden;
 }
 
 footer ul {
@@ -212,7 +213,7 @@ footer ul {
     /* position: absolute;  */
     bottom: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 .rowFlex {
